<resources>
    <string name="app_name">AnimaFolio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anima Folio</string>
    <string name="nav_header_subtitle">barabudev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_parallax">Parallax</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_test">Any action</string>

    <string name="motion">Parallax Motion Edu</string>

    <string name="stub_image">Google Image</string>

    <string-array name="month_names">
        <item>Winter: December</item>
        <item>Winter: January</item>
        <item>Winter: February</item>
        <item>Spring: March</item>
        <item>Spring: April</item>
        <item>Spring: May</item>
        <item>Summer: June</item>
        <item>Summer: July</item>
        <item>Summer: August</item>
        <item>Autumn: September</item>
        <item>Autumn: October</item>
        <item>Autumn: November</item>
    </string-array>

</resources>
